# atmoic-agents

./: .gitignore  pyproject.toml
.vim/: coc-settings.json
agents/: kubernetes.py
agents/kubernetes/: debug.py
tests/: test_kubectl.py  test_kubernetes_agent.py  test_kubernetes_debug.py
tests/test_tools/: test_kubectl_tool.py
tools/: kubectl.py  kubectl_tool.py
