[tool.poetry]
name = "csanders-atomic-agents"
version = "0.1.0"
description = ""
authors = ["Chris Sanders <sanders.chris@gmail.com>"]
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "tools" },
]

[tool.poetry.dependencies]
python = "^3.11"
atomic-agents = "^1.0.8"
pydantic = "^2.9.2"
rich = "^13.9.4"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
