[tool.poetry]
name = "csanders-atomic-agents"
version = "0.1.0"
description = ""
authors = ["Chris Sanders <sanders.chris@gmail.com>"]
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "tools" },
]

[tool.poetry.dependencies]
python = "^3.11"
instructor = "^1.6.3"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
